[package]
name = "matrix-room-redact"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.11.0", features = ["e2e-encryption", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
